--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -9,22 +9,31 @@ nav:
     - clase_00/index.md
   - "Clase 01: Programa y Operadores":
     - clase_01/index.md
-    - Ejercicios: clase_01/c_01_ejercicios.md
+    - Ejercicios: clase_01/ejercicios.md
   - "Clase 02: Variables y Expresiones":
     - clase_02/index.md
-    - Ejercicios: clase_02/c_02_ejercicios.md
-  - "Clase 03: Funciones":
-    - clase_03/index.md
-    - Ejercicios: clase_03/c_03_ejercicios.md
-  - "Clase 04: API de Java":
+    - Ejercicios: clase_02/ejercicios.md
+  - "Clase 03: Variables II":
+      - clase_03/index.md
+      - Ejercicios: clase_03/ejercicios.md
+  - "Clase 04: Estructuras de control":
     - clase_04/index.md
-    - Ejercicios: clase_04/c_04_ejercicios.md
-  - "Clase 05: Clases":
+    - Ejercicios: clase_04/ejercicios.md
+  - "Clase 05: Funciones":
     - clase_05/index.md
-    - Ejercicios: clase_05/c_05_ejercicios.md
-  - "Clase 06: Misterio":
-      - clase_06/index.md
-      - Ejercicios: clase_06/c_06_ejercicios.md
+    - Ejercicios: clase_05/ejercicios.md
+  - "Clase 06: Funciones II":
+    - clase_06/index.md
+    - Ejercicios: clase_06/ejercicios.md
+  - "Clase 07: API de Java":
+    - clase_07/index.md
+    - Ejercicios: clase_07/ejercicios.md
+  - "Clase 08: Clases":
+      - clase_08/index.md
+      - Ejercicios: clase_08/ejercicios.md
+  - "Clase 09: Arrays":
+      - clase_09/index.md
+      - Ejercicios: clase_09/ejercicios.md
   - Glosario: 'glosario.md'
   - Ejercicios:
       - Clase xx: ejercicios/index.md
@@ -64,7 +73,9 @@ markdown_extensions:
   - pymdownx.tilde
   - codehilite
   - footnotes
-  - smarty
+  - smarty:
+      smart_quotes: false
+      smart_dashes: false
   - toc:
       permalink: true
       baselevel: 1
@@ -76,17 +87,11 @@ markdown_extensions:
   - pymdownx.emoji:
       emoji_index: !!python/name:material.extensions.emoji.twemoji
       emoji_generator: !!python/name:material.extensions.emoji.to_svg
-  - pymdownx.arithmatex:
-      generic: true
-extra_javascript:
-#  - 'js/mathjax.js'
-#  - https://unpkg.com/mathjax@3/es5/tex-mml-chtml.js
-  - 'js/katex.js'
-  - https://unpkg.com/katex@0/dist/katex.min.js
-  - https://unpkg.com/katex@0/dist/contrib/auto-render.min.js
+  - markdown_katex:
+      no_inline_svg: True
+      insert_fonts_css: True
 extra_css:
   - 'css/overrides.css'
-  - https://unpkg.com/katex@0/dist/katex.min.css
 plugins:
   - search:
       lang: es
@@ -96,7 +101,7 @@ plugins:
       cover: true
       back_cover: true
       cover_subtitle: "Documentación y ejercicios <3"
-      copyright: "🄯 Por y para todxs"
+      copyright: "🄯 Para que reine en el pueblo el amor y la igualdad ✌"
       download_link: header
       toc_title: "Índice"
       heading_shift: true
@@ -104,7 +109,7 @@ plugins:
       ordered_chapter_level: 3
       two_columns_level: 0
       render_js: false
-      headless_chrome_path: headless-chromium
+      verbose: false
 #      custom_template_path: TEMPLATES PATH
 #      output_path: pdf/document.pdf
       # Si descomentamos esto, el build lo corremos con el param: $ ENABLE_PDF_EXPORT=1 mkdocs build
