--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -116,4 +116,15 @@ plugins:
       enabled_if_env: ENABLE_PDF_EXPORT
       debug_html: true
 #      show_anchors: false
-#      verbose: false
+#      exclude_pages:
+#        - clase_00
+#        - clase_03
+#        - clase_04
+#        - clase_05
+#        - clase_06
+#        - clase_07
+#        - clase_08
+#        - clase_09
+#        - clase_10
+#        - ejercicios
+#        - glosario
